--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Datasets/The Climate Change Twitter Dataset.csv.zip
 Datasets/Climate Change Twitter Dataset.csv
 .DS_Store
 *.h5
+Kaggle Datasets/Climate Change Twitter Dataset.csv
+Kaggle Datasets/The Climate Change Twitter Dataset.csv.zip
